--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -1,9 +1,9 @@
 <section class="people">
-<header class="section">
-<h2>People</h2>
-</header>
-<div class="content">
-<ul>
+  <header class="section">
+    <h2>People</h2>
+  </header>
+  <div class="content">
+  <ul>
   <% @event.people.each do | person | %>
   <li>
       <article>
@@ -12,14 +12,35 @@
           </header>
           <ul>
             <li><b>Name:</b> <span class="name"><%=person.name%></span></li>
-             <li><b>Role:</b> President of Syria</li>
-             <li><b>Description:</b> <%= person.abstract %></li>
+            <li><b>Role:</b> President of Syria</li>
+            <li><b>Description:</b> <%= person.abstract %></li>
           </ul>     
           <figure>
           <img src="<%= person.thumbnail %>" width="95" height="95" alt="Bashar al-Assad" />
               <figcaption>Bashar al-Assad</a></figcaption>
           </figure>
           <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad" class="profile">Profile</a>
+          
+          <!-- List of articles in the context of a person -->
+          <section class="articles">
+          <!--
+          <header>
+            <h2>Latest Articles</h2>
+          </header>
+          -->
+          
+          <div class="content">          
+	          <ol id="person-articles">
+	              <li><a href="/article/15869914"><span>Syria unrest: Arab League sets observer ultimatum</span></a></li>
+	              <li><a href="/article/19161940"><span>How Asil Nadir stole Polly Peck's millions</span></a></li>              
+	              <li><a href="/article/15206245"><span>Syrian troops 'kill Syrian farmer in Lebanon'</span></a></li>
+	              <li><a href="/article/19414144"><span>Syrian rivals set for drawn-out conflict</span></a></li>
+	              <li><a href="/article/19107575"><span>Jordan struggles with Syrian refugee influx</span></a></li>
+	              <li><a href="/article/18606341"><span>Gunmen 'kill seven' at Syrian pro-Assad Ikhbariya TV</span></a></li>
+	              <li><a href="/article/17277160"><span>Syrian government forces 'shell rebel-held towns'</span></a></li>
+	          </ol>	      
+	      </div>      
+          </section>          
       </article>      
   </li>
   <% end %>
