--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -22,25 +22,7 @@
           <a href="http://www.bbc.co.uk/news/10338256" title="Profile of Bashar al-Assad" class="profile">Profile</a>
           
           <!-- List of articles in the context of a person -->
-          <section class="articles">
-          <!--
-          <header>
-            <h2>Latest Articles</h2>
-          </header>
-          -->
-          
-          <div class="content">          
-	          <ol id="person-articles">
-	              <li><a href="/article/15869914"><span>Syria unrest: Arab League sets observer ultimatum</span></a></li>
-	              <li><a href="/article/19161940"><span>How Asil Nadir stole Polly Peck's millions</span></a></li>              
-	              <li><a href="/article/15206245"><span>Syrian troops 'kill Syrian farmer in Lebanon'</span></a></li>
-	              <li><a href="/article/19414144"><span>Syrian rivals set for drawn-out conflict</span></a></li>
-	              <li><a href="/article/19107575"><span>Jordan struggles with Syrian refugee influx</span></a></li>
-	              <li><a href="/article/18606341"><span>Gunmen 'kill seven' at Syrian pro-Assad Ikhbariya TV</span></a></li>
-	              <li><a href="/article/17277160"><span>Syrian government forces 'shell rebel-held towns'</span></a></li>
-	          </ol>	      
-	      </div>      
-          </section>          
+          <%= erb :'modules/_articles' %>          
       </article>      
   </li>
   <% end %>
