--- a/views/event.erb
+++ b/views/event.erb
@@ -24,7 +24,7 @@
       
       <%= erb :'modules/_people' %>
       <%= erb :'modules/_places' %>
-      <%= erb :'modules/_articles' %>      
+      <%= erb :'modules/_articles', :scope => @event %>      
       <section class="timeline">
           <header class="section">
             <h2>Timeline</h2>
