tweaks to templates

--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -1,3 +1,4 @@
+<% if not @event.people.empty? %>
 <section class="people">
   <header class="section">
     <h2>People</h2>
@@ -32,4 +33,5 @@
 </ul>
 </div>
 </section>
+<% end %>
 
