--- a/views/modules/_articles.erb
+++ b/views/modules/_articles.erb
@@ -1,13 +1,14 @@
-
-<section class="articles">
-<header class="section">
-<h2>Latest Articles</h2>
-</header>
-<div class="content">
-  <ol>
-    <% @articles.each do | article | %>
-      <li><a href="<%=article.uri%>"><span><%=article.title%></span></a></li>
-    <% end %>
-  </ol>
-</div>          
-</section>
+<% if not @articles.empty? %>
+  <section class="articles">
+  <header class="section">
+  <h2>Latest Articles</h2>
+  </header>
+  <div class="content">
+    <ol>
+      <% @articles.each do | article | %>
+        <li><a href="<%=article.uri%>"><span><%=article.title%></span></a></li>
+      <% end %>
+    </ol>
+  </div>          
+  </section>
+<% end %>
