trying out simple scraping of events on index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,37 +1,4 @@
 <div class="container">
-  <article>
-  <header class="article">
-  <h1>Article Title</h1>
-  </header>
-
-  <section class="sub">
-  <h2>People</h2>
-  <p>Lorem ipsum ...</p>
-  </section>
-
-  <section class="sub">
-  <h2>Places</h2>
-  <p>Lorem ipsum ...</p>
-  </section>
-
-  </article>
-
-  <section>
-  <header class="section">
-  <h2>People</h2>
-  </header>
-  </section>
-
-  <section>
-  <header class="article">
-  <h2>Places</h2>
-  </header>
-  </section>
-
-  <section>
-  <header class="article">
-  <h2>Events</h2>
-  </header>
-  </section>
+  <%= @events %>
 </div>  
 
