--- a/views/layout.erb
+++ b/views/layout.erb
@@ -37,7 +37,7 @@
                 <a href="#">Most Read</a>
             </li>
             <li class="tab-3 open">
-                <a href="#">Events</a>
+                <a href="/">Events</a>
             </li>
           </ul>
         </div>
