added event description

--- a/views/event.erb
+++ b/views/event.erb
@@ -13,7 +13,7 @@
             <img src="/images/event/syria-crisis_320.jpg" width="320" height="186" alt="" data-fullsrc="syria-crisis_640" />
             <figcaption>Bombing in a Syrian city</a></figcaption>
           </figure>
-          <p>Event description</p>
+          <p><%= @event.description %></p>
 
           <a href="#">
               <span class="cta">
