fixinf image alt for person

--- a/views/modules/_people.erb
+++ b/views/modules/_people.erb
@@ -13,7 +13,7 @@
           </header>
           <div class="figure">
             <figure>
-                <img src="<%= person.thumbnail %>" width="95" height="95" alt="Bashar al-Assad" />
+                <img src="<%= person.thumbnail %>" width="95" height="95" alt="<%=person.name%>" />
                 <figcaption><%=person.name%></a></figcaption>
             </figure>
             <a href="http://www.bbc.co.uk/news/10338256" title="Profile of <%=person.name%>" class="profile">Profile</a>
