--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,21 +10,22 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/events-core.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/media-queries-temp.css">    
     <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
+    <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>4
   </head>
 
   <body>
-  
+
     <header class="banner" role="banner">
-	    <div id="global-header">
-	      <a href="http://www.bbc.co.uk">
-	        <img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" />
-	      </a>
-	    </div>
-	    <div id="events-header">
-	      <h1>
-	        <a href="http://www.bbc.co.uk/news">News</a>
-	      </h1>
-	    </div>
+    <div id="global-header">
+      <a href="http://www.bbc.co.uk">
+        <img src="/images/bbc_blocks.png" width="84" height="24" alt="British Broadcasting Corporation" />
+      </a>
+    </div>
+    <div id="events-header">
+      <h1>
+        <a href="http://www.bbc.co.uk/news">News</a>
+      </h1>
+    </div>
     </header>    
 
     <div id="tab-wrapper" class="outer solid">
@@ -32,26 +33,26 @@
         <div id="index-tabs" class="tabs">
           <ul>
             <li class="tab-1">
-                <a href="#">Top Stories</a>
+            <a href="#">Top Stories</a>
             </li>
             <li class="tab-2">
-                <a href="#">Most Read</a>
+            <a href="#">Most Read</a>
             </li>
             <li class="tab-3 open">
-                <a href="/">Events</a>
+            <a href="/">Events</a>
             </li>
           </ul>
         </div>
       </div>
     </div>    
-    
+
     <%= yield %>
-    
+
     <footer>
     <div id="footer-content">
       <p>BBC &copy; 2012</p>
     </div>
     </footer>
-    
+
   </body>
 </html> 
