removed old article template and changed default event uri in top nav

--- a/views/event.erb
+++ b/views/event.erb
@@ -1,7 +1,7 @@
     <div class="container" id="news-lab-events">
       <nav class="breadcrumb">
           <ol>
-              <li><a href="/event/arab_spring">Events</a></li>
+              <li><a href="/">Events</a></li>
           </ol>
       </nav>
       
