added some dummy links for articles related to places

--- a/views/event.erb
+++ b/views/event.erb
@@ -17,9 +17,9 @@
 
           <a href="#">
               <span class="cta">
-                  <span class="icon live"><b>LIVE</b></span> Displaced civilians <time>1 hour ago</time>
+                  <span class="icon live"><b>LIVE</b></span> Breaking news <time>1 hour ago</time>
               </span>
-          </a> 
+          </a>
       </article>      
       
       <%= erb :'modules/_articles', :scope => @event %>      
