--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -382,55 +382,18 @@ footer {
   margin: 0;
 }
 
-/* Polymap */
-svg {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  height: 70%; 
-  background: transparent;
+/* GMap */
+div#news-lab-events section.places #map h3 strong {
+    font-weight: 800;
 }
-.compass .back {
-  fill: #eee;
-  fill-opacity: .8;
+div#news-lab-events section.places #map ul{
+    padding:5px;
 }
-.compass .fore {
-  stroke: #999;
-  stroke-width: 1.5px;
+div#news-lab-events section.places #map ul li a{
+   font-weight: 800; 
 }
-.compass rect.back.fore {
-  fill: #999;
-  fill-opacity: .3;
-  stroke: #eee;
-  stroke-width: 1px;
-  shape-rendering: crispEdges;
-}
-.compass .direction {
-  fill: none;
-}
-.compass .chevron {
-  fill: none;
-  stroke: #999;
-  stroke-width: 5px;
-}
-.compass .zoom .chevron {
-  stroke-width: 4px;
-}
-.compass .active .chevron, .compass .chevron.active {
-  stroke: #fff;
-}
-.compass.active .active .direction {
-  fill: #999;
-}
-.tweet-container,
-text {       
-  fill: white;
-  font-family: arial, sans-serif;
-  text-shadow: 1px 1px 1px #000; 
-  font: 18px/1.5 sans-serif;
-}
-circle {
-  fill: red;
+div#news-lab-events section.places #map ul li a:hover{
+   text-decoration:underline;     
 }
 
 /* For events index page */
