--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/events-core.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/media-queries-temp.css">    
     <script type="text/javascript" data-main="/javascripts/main" src="/javascripts/require-jquery.js"></script>    
-    <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>4
+    <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
   </head>
 
   <body>
