--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -183,16 +183,21 @@ div#news-lab-events article.intro figure {
   left: 0;
   z-index: -1;	
 }
+div#news-lab-events article.intro figure img {
+    width: 100%;	
+}
 div#news-lab-events article.intro p {
   font-size: 1.6rem;
   line-height: 1.2;
-  margin: 6px 0 0 10px;	
+  margin: 6px 0 0 10px;
+  background-color: #ffffff;
 }
 div#news-lab-events .cta {
   display: block;
   font-size: 1.6rem;
   font-weight: 800;
   margin: 5px 0 17px 10px;
+  background-color: #ffffff;
 }
 div#news-lab-events .icon.live {
   position: relative;
@@ -250,6 +255,14 @@ div#news-lab-events section.people ul article header{
 div#news-lab-events section.people ul article div.figure {
   width: 95px;
   float: left;
+}
+div#news-lab-events section.people ul article figure {
+  width: 95px;
+  height: 95px;
+  overflow: hidden;	
+}
+div#news-lab-events section.people ul article div.figure img {
+  width: 100%;	
 }
 div#news-lab-events section.people ul article ul {
   font-size: 1.4rem;
