--- a/public/stylesheets/media-queries-temp.css
+++ b/public/stylesheets/media-queries-temp.css
@@ -17,21 +17,94 @@
       display: none;
     }
 }
-/* Tablets */
-@media screen and (min-width: 768px){
+/* Tablets portrait */
+@media screen and (min-width: 768px) and (max-width: 1023px){
+    div#news-lab-events section.timeline figure.tiny-timeline{
+      display: none;
+    }
+    div#news-lab-events section.timeline .content{
+      background-color: white;
+    }	
+}
+/* Tablets landscape and beyond */
+@media screen and (min-width: 1024px) {
 	div#news-lab-events article.intro {
 	    width: 736px;
-	    float: left;
+	    float: left;   
+	}
+	div#news-lab-events article.intro figure {
+	    width: 736px;
+	    height: 414px;
+	    overflow: hidden;
+	}
+	div#news-lab-events section header h2 {	
+        background: #dcdcdc;
+    }
+    div#news-lab-events article.intro header h1 {
+	    margin-top: 373px;
 	}
 	div#news-lab-events section.articles {
 	    width: 256px;
 	    float: left;
 	}
-        div#news-lab-events section.timeline figure.tiny-timeline{
-          display: none;
-        }
-        div#news-lab-events section.timeline .content{
-          background-color: white;
-        }
+    div#news-lab-events div.secondary-modules {        
+        clear: both;
+    }
+    div#news-lab-events section.articles ol li a {
+        background-color: #ffffff;
+    }
+    div#news-lab-events section.people {
+        width: 496px;
+        float: left;
+    }
+    div#news-lab-events section.people ul li {
+        background-color: #DCDCDC;
+    }
+    div#news-lab-events section.people ul article div.figure {
+	  width: 176px;
+	}
+	div#news-lab-events section.people ul article figure {
+	  width: 176px;
+	  height: 100px;	
+	}
+    div#news-lab-events section.people ul section.articles {
+        width: 478px;
+    }
+    div#news-lab-events section.people ul li section.articles header h2{
+        background-color: #c0c0c0;
+        color: #ffffff;
+    }
+    div#news-lab-events section.places {
+        width: 480px;
+        float: left;
+        margin-left: 16px;
+    }
+    div#news-lab-events section.timeline {
+        position: relative;
+        top: 15px;
+        clear: both;
+        min-height: 363px;
+    }
+    div#news-lab-events section.timeline header h2{
+        background-color: #ffffff;
+        color: #4f4f4f;
+    }
+    div#news-lab-events section.timeline .content {
+        background-color: #ffffff;
+    }
+    div#news-lab-events section.timeline figure.tiny-timeline {
+        display: none;
+    }
+    div#news-lab-events section.timeline a.cta {
+        width: 17rem;
+        font-weight: 400;
+        position: absolute;
+        top: 5px;
+        right: 26px;         
+    }
+    div#news-lab-events section.people article a.profile {
+	  display: block;    
+	  width: 176px;
+	  margin-top: 0;
+	}
 }
-	
