--- a/views/event.erb
+++ b/views/event.erb
@@ -13,7 +13,7 @@
             <img src="/images/event/event-placeholder.jpeg" alt="Event placeholder"/>
             <figcaption>Bombing in a Syrian city</a></figcaption>
           </figure>
-          <p id="event-description">Vince Cable has dismissed a warning by senior Lib Dem colleague Sir Menzies Campbell about his text exchanges with Labour leader Ed Miliband. Vince Cable has dismissed a warning by senior Lib Dem colleague Sir Menzies Campbell about his text exchanges with Labour leader Ed Miliband.</p>
+          <p id="event-description"><%= @event.description %></p>
 
           <a href="#">
               <span class="cta">
